<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_delete">Delete</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_reposrt">Send crime report via</string>
    <string name="crime_call_text">Call suspect</string>
</resources>
